feat: add initial project structure with Maven POM and API key filter
- Created a new Maven project with a parent POM defining modules for Spring API and JavaFX UI.
- Added ApiKeyFilter class to enforce API key validation for incoming requests.
- Configured the filter to allow access to specific open paths without an API key.
- Implemented logic to return unauthorized responses for requests missing or with invalid API keys.